+can now process outside data properly

--- a/chapter-02-car-price-project.ipynb
+++ b/chapter-02-car-price-project.ipynb
@@ -11,7 +11,17 @@
     "### Copyright 2021, Manning Publications\n",
     "\n",
     "Written in Python version 3.10.7 <br>\n",
-    "Jupyter Notebook built on Windows 11 local server using VS Code Jupyter Extension v2022.8.1002431955"
+    "Jupyter Notebook built on Windows 11 local server using VS Code Jupyter Extension v2022.8.1002431955\n",
+    "\n",
+    "This project covers the following objectives:\n",
+    "*Creating a regression model from scratch (that is, direct application of linear algebra, not using built-in regression functions)\n",
+    "*Exploratory data analysis\n",
+    "*Setting up and implementing a validation framework\n",
+    "*Performing basic feature engineering\n",
+    "*Controlling model through regularization\n",
+    "*Using the model to predict car prices \n",
+    "\n",
+    "The main section of the project primarily follows code from book. Occasional comments and explanations are my own. All code and commentary in \"Challenge Problems\" section (code block 41 to end) is entirely my own."
    ]
   },
   {
@@ -21,8 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -728,7 +736,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e4507e83a0>"
+       "<matplotlib.legend.Legend at 0x23af1028f10>"
       ]
      },
      "execution_count": 17,
@@ -885,7 +893,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e451bedff0>"
+       "<matplotlib.legend.Legend at 0x23af45c5f60>"
       ]
      },
      "execution_count": 23,
@@ -1472,7 +1480,7 @@
     "    df_num = df[features]\n",
     "    df_num = df_num.fillna(0)\n",
     "    X = df_num.values\n",
-    "    return X"
+    "    return X, features"
    ]
   },
   {
@@ -1482,7 +1490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train2 = prepare_X_var2(df_train)"
+    "X_train2, f = prepare_X_var2(df_train)"
    ]
   },
   {
@@ -1534,7 +1542,9 @@
    "source": [
     "### Exercise 2 - Try additional feature engineering.\n",
     "\n",
-    "In the original regression model, we used no more than the top five values for any categorical variable. The `encode_cat() ` function in exercise 1 already extends this to factor all levels of each category, for a total of 166 dimensions in the output DataFrame. All that is left here is to test model quality using the updated features."
+    "In the original regression model, we used no more than the top five values for any categorical variable. The `encode_cat() ` function in exercise 1 already extends this to factor all levels of each category, for a total of 169 dimensions in the original DataFrame. However, we will need to substantially modify the code in order to get outputs of the right dimensions for our training/validation/test sets and any simulated outside data.\n",
+    "\n",
+    "Because of the extent of the redesign, I chose to start from scratch and reload fresh data from the CSV."
    ]
   },
   {
@@ -1586,7 +1596,7 @@
     "\n",
     "del df_shuffled['msrp']\n",
     "\n",
-    "X_prepared = prepare_X_var2(df_shuffled)"
+    "X_prepared, features_prepared = prepare_X_var2(df_shuffled)"
    ]
   },
   {
@@ -1661,6 +1671,159 @@
    "metadata": {},
    "source": [
     "This time, we get even better results - RMSE on both the validation and test sets is about e^0.4 = 1.49, compared to 1.58 without the additional features. That being said, the additional improvement is fairly small. Significant improvement to model accuracy would probably require either additional data, perhaps about the buyers or dealerships, or more advanced models (regression trees might be an option)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127e1f2b",
+   "metadata": {},
+   "source": [
+    "In order to get this to work with new data, however, we need to ensure that any new data is transformed properly into the new column format. Because of the way the new encoding function works, it isn't as simple as running it directly through the transform we did earlier. I modified the prepare_X_var2 function to also return the feature list - we will use it here to create a new DataFrame with the right columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9cb8fd47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use the same car as before\n",
+    "ad = {\n",
+    "    'city_mpg': 18,\n",
+    "    'driven_wheels': 'all_wheel_drive',\n",
+    "    'engine_cylinders': 6.0,\n",
+    "    'engine_fuel_type': 'regular_unleaded',\n",
+    "    'engine_hp': 268.0,\n",
+    "    'highway_mpg': 25,\n",
+    "    'make': 'toyota',\n",
+    "    'market_category': 'crossover,performance',\n",
+    "    'model': 'venza',\n",
+    "    'number_of_doors': 4.0,\n",
+    "    'popularity': 2031,\n",
+    "    'transmission_type': 'automatic',\n",
+    "    'vehicle_size': 'midsize',\n",
+    "    'vehicle_style': 'wagon',\n",
+    "    'year': 2013\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "85808771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this function will prepare new data to match formatted DataFrame\n",
+    "\n",
+    "def prepare_data(newcar, f):\n",
+    "    #newcar is a dictionary of car attributes - all keys must be strings\n",
+    "    #f is the ordered list of features in the regression model\n",
+    "    #output is 1d np.array \n",
+    "    \n",
+    "    init_array = np.zeros(len(f))\n",
+    "    car = pd.Series(data = init_array, index = f)\n",
+    "    \n",
+    "    for k, v in newcar.items():\n",
+    "        \n",
+    "        #add numeric values with matching keys directly to car Series\n",
+    "        if k in car.index and (type(v) == int or type(v) == float):\n",
+    "            car[k] = v\n",
+    "        \n",
+    "        #raise error if key matches but non-numeric value passed\n",
+    "        elif k in car.index and type(v) != int and type(v) != float:\n",
+    "            raise ValueError('Value for ' + k + ' should be numeric.')\n",
+    "        \n",
+    "        #year variable gets transformed to age\n",
+    "        elif k == 'year':\n",
+    "            car['age'] == 2017 - v\n",
+    "        \n",
+    "        #process categorical variables - 'model' attribute is not included in regression model\n",
+    "        else:\n",
+    "            idx_name = k + ('_%s' % v)\n",
+    "            if idx_name in car.index: #if category exists, assign value of 1 to that index\n",
+    "                car[idx_name] = 1\n",
+    "            #if category doesn't exist, skip it\n",
+    "    \n",
+    "    return car.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006bc620",
+   "metadata": {},
+   "source": [
+    "Let's also add in a simple function to give us the predicted price for a single car."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "128b6933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_price(car, w_0, w):\n",
+    "    #car is a numpy array-like object (np.array, pd.Series, or pd.DataFrame should all work)\n",
+    "    #w_0 is numeric bias term from regression model\n",
+    "    #w is weights vector from regression model\n",
+    "    #output is single numeric value (if car is 1 dimensional) or array (if car is multi-dimensional)\n",
+    "    \n",
+    "    return np.exp(w_0 + car.dot(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f7c85a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted price: 41848.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "ad_prepared = prepare_data(ad, features_prepared)\n",
+    "\n",
+    "pred_price = round(predict_price(ad_prepared, w_0, w), 2)\n",
+    "print('Predicted price: %s' % pred_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "212e921b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10728.5"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The actual price of this car is 31120\n",
+    "actual_price = 31120\n",
+    "diff = round(pred_price - actual_price, 2)\n",
+    "diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3f321d4",
+   "metadata": {},
+   "source": [
+    "For this particular car, our new model actually performed worse than the original with fewer features. The suggested price here ended up being over $10000 higher than the actual price (compared to about $2800 below for the original model). This is not a representative sample, however, and both our test and validation sets had less average error than the mean model."
    ]
   }
  ],
