fix markdown formatting

--- a/chapter-02-car-price-project.ipynb
+++ b/chapter-02-car-price-project.ipynb
@@ -1823,7 +1823,7 @@
    "id": "c3f321d4",
    "metadata": {},
    "source": [
-    "For this particular car, our new model actually performed worse than the original with fewer features. The suggested price here ended up being over $10000 higher than the actual price (compared to about $2800 below for the original model). This is not a representative sample, however, and both our test and validation sets had less average error than the mean model."
+    "For this particular car, our new model actually performed worse than the original with fewer features. The suggested price here ended up being over 10000 dollars higher than the actual price (compared to about 2800 below for the original model). This is not a representative sample, however, and both our test and validation sets had less average error than the mean model."
    ]
   }
  ],
